# ACMS-Server-module

./: CMakeLists.txt  code.c  frozen.c  frozen.h  main.c
airplane/: plane.h
client-module/: config.h  console.h  mq-client.c  msg.h  reciever.c  sender.c  socket.h
protocol/: 2json.h  ap_data.h  app-proto.h  app_cl_handlers.h  app_proto.h  app_sv_handlers.h  proto-client.h  proto-common.h  proto-server.h
protocols/: protocol-agc.h  protocol-app.c  protocol-app.h
server/: client.c  config.h  console.h  message.h  mqueue.h  server.c  socket.h
structures/: airport_data.h  collision.h  message.h  plane-data.h  plane.h  route.h  schedule.h  weather.h
